Deployment preparation: Updated Railway config, removed build outputs